--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,14 @@
+/* filepath: /c:/Users/KimDog/Documents/Development/Websites/kimdog-smp/app/globals.css */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: 'SuperBakery';
+  src: url('/fonts/SuperBakery.ttf') format('truetype'); /* Adjust the path to your font file */
+  font-weight: normal;
+  font-style: normal;
+}
 
 :root {
   --background: #ffffff;
@@ -17,5 +25,5 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
